# bin_picking_robot

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  compile_commands.json  robot_description.txt  something.cmake
app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/pose_estimation/: CMakeLists.txt  pose_estimation.hpp
libs/robot/: CMakeLists.txt  robot.hpp  src.cpp
libs/robot_motion_planner/: CMakeLists.txt  robot_motion_planner.hpp
src/my_robot/custom_motions/: CMakeLists.txt  package.xml
src/my_robot/custom_motions/launch/: approach_retreat.launch.py  cartesian_path.launch.py  setup_collision_objects.launch.py
src/my_robot/custom_motions/scripts/: run_me_for_fun.bash
src/my_robot/custom_motions/src/: approach_retreat.cpp  cartesian_path.cpp  perception_pose.cpp  setup_collision_objects.cpp  visualise_pose.cpp
src/my_robot/custom_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_robot/custom_moveit_config/config/: controllers.yaml  kinematics.yaml  moveit_controllers.yaml  name.srdf  ompl_planning.yaml
src/my_robot/custom_moveit_config/custom_moveit_config/: launch_common.py
src/my_robot/custom_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_robot/custom_moveit_config/srdf/: ur_moveit.srdf.xacro
src/my_robot/data_generation_gazebo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_robot/data_generation_gazebo/data_generation_gazebo/: model_spawner_image.py
src/my_robot/data_generation_gazebo/launch/: gazebo.launch.py  start_data_collection.launch.py
src/my_robot/data_generation_gazebo/models/biscuits/: model.sdf
src/my_robot/data_generation_gazebo/test/: integration_test.cpp
src/my_robot/data_generation_gazebo/urdf/: all_sensors.urdf.xacro  asus_xtion_pro.urdf.xacro  axis.urdf.xacro  axis_m5013.urdf.xacro  axis_m5525.urdf.xacro  axis_q8641.urdf.xacro  azure_kinect.urdf.xacro  benewake_ce30.urdf.xacro  benewake_ce30d.urdf.xacro  embedded_s.urdf.xacro  fotonic_e.urdf.xacro  gps.urdf.xacro  gps_with_mast.urdf.xacro  hokuyo3d.urdf.xacro  hokuyo_urg04lx.urdf.xacro  hokuyo_ust10lx.urdf.xacro  hokuyo_ust20lx.urdf.xacro  hokuyo_utm30lx.urdf.xacro  imu.urdf.xacro  imu_hector_plugin.urdf.xacro  intel_d435.urdf.xacro  intel_r430.urdf.xacro  kinect.urdf.xacro  kinectv2.urdf.xacro  lidar_mast.urdf.xacro  orbbec_astra.urdf.xacro  ouster1.urdf.xacro  pantilt.urdf.xacro  roboteq_mgs.urdf.xacro  rplidar.urdf.xacro  rplidar_a2.urdf.xacro  rs_bpearl.urdf.xacro  rslidar.urdf.xacro  rslidar_mems.urdf.xacro  rubedos_viper.urdf.xacro  sensor.urdf.xacro  sick_microscan3.urdf.xacro  sick_mls.urdf.xacro  sick_nanoscan3.urdf.xacro  sick_outdoorscan3.urdf.xacro  (+13 more)
src/my_robot/gazebo_link_attacher/linkattacher_msgs/: CMakeLists.txt  package.xml
src/my_robot/gazebo_link_attacher/linkattacher_msgs/srv/: AttachLink.srv
src/my_robot/perception_system/: CMakeLists.txt  package.xml
src/my_robot/perception_system/config/: dropbox.yaml
src/my_robot/perception_system/dl_models/: model.sav  training_set.sav
src/my_robot/perception_system/include/perception_system/: pick_and_place_server.hpp  robot_motion.hpp
src/my_robot/perception_system/launch/: perception_preprocessing.launch.py
src/my_robot/perception_system/scripts/: capture_features.py  grasp_server.py  pcl_helper.py  perception.py  pr2_safe_spawner.sh  train_svm.py
src/my_robot/perception_system/src/: pick_and_place_server.cpp  pointcloud_transformation.cpp  robot_motion.cpp  vision_based_processing.cpp
src/my_robot/robotnik_sensors/robotnik_sensors_gazebo/: CMakeLists.txt  package.xml
src/my_robot/ur_description/: .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
src/my_robot/ur_description/config/ur10/: joint_limits.yaml  physical_parameters.yaml
src/my_robot/ur_description/config/ur10e/: joint_limits.yaml  physical_parameters.yaml
src/my_robot/ur_description/config/ur16e/: joint_limits.yaml  physical_parameters.yaml
src/my_robot/ur_description/config/ur20/: joint_limits.yaml  (+1 more)
src/my_robot/ur_description/launch/: view_ur.launch.py
src/my_robot/ur_description/scripts/: generate_coverage_report.bash
src/my_robot/ur_description/test/: test_view_ur_launch.py
src/my_robot/ur_description/urdf/: gripper.urdf.xacro  test_extra_pharmacy_robot.urdf  ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro  ur_macro_2.xacro  ur_test.urdf.xacro  ur_test_2.urdf.xacro  ur_test_3.urdf.xacro  ur_test_4.urdf.xacro
src/my_robot/ur_moveit_config/: CMakeLists.txt  package.xml
src/my_robot/ur_moveit_config/config/: controllers.yaml  controllers_1.yaml  ur_servo.yaml
src/my_robot/ur_moveit_config/launch/: ur_moveit.launch.py  ur_moveit_2.launch.py
src/my_robot/ur_moveit_config/srdf/: ur.srdf.xacro  ur_1.srdf.xacro  ur_gripper.urdf  ur_macro.srdf.xacro  ur_macro_2.srdf.xacro  ur_moveit.srdf.xacro
src/my_robot/ur_simulation_gazebo/: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
src/my_robot/ur_simulation_gazebo/config/: kinematics.yaml  moveit_controllers.yaml  ur_controllers.yaml  ur_controllers_robotiq.yaml
src/my_robot/ur_simulation_gazebo/launch/: ur_sim_control.launch.py  ur_sim_control_2.launch.py  ur_sim_control_3.launch.py  ur_sim_moveit.launch.py  ur_sim_moveit_1.launch.py  ur_sim_moveit_2.launch.py  ur_sim_moveit_2_sensor_integrated.launch.py  ur_sim_moveit_3_gripper.launch.py  ur_sim_moveit_4_gripper.launch.py  ur_sim_pick_and_place.launch.py
src/my_robot/ur_simulation_gazebo/test/: test_common.py  test_gazebo.py
src/my_robot/ur_simulation_gazebo/test copy/: integration_test.cpp
src/my_robot/ur_simulation_gazebo/worlds/: challenge.world  cylinder.world  cylinder_perception.world  empty.world  house.world  house_classic.world  small_warehouse.world  small_warehouse_classic.world  tabletop.world  test1.world  test2.world  test3.world  test4.world
src/ros2_template_pkg/: CMakeLists.txt  compile_commands.json
(+194 files in other folders)
