<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_generation_gazebo</name>
  <version>1.1.2</version>
  <description>Meta package to group gazebo plugins dependencies used in robotnik_sensors.</description>

  <maintainer email="rmartin@robotnik.es">Rafael Martin</maintainer>

  <license>BSD</license>
  <author email="rmartin@robotnik.es">Rafael Martin</author>

  <!-- BASE DEPENDENCIES -->
  <!-- <exec_depend>robotnik_sensors</exec_depend> -->

  <!-- GAZEBO DEPENDENCIES -->
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <!-- <exec_depend>opencv</exec_depend> -->

  <!-- GAZEBO PLUGINS -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
